Add difficulty menu
This necessitated routing the page, with several other changes to the
board and layout code.

Also removed a ts-ignore by using the Record type!

--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -1,4 +1,9 @@
 {
   "checkBoardButton": "Check",
-  "description": "Please don't commit sudoku"
+  "description": "Please don't commit sudoku",
+  "copyrightNotice": "Copyright © 2020 Tore Bergebakken - Some rights reserved.",
+  "difficultyEasy": "Easy",
+  "difficultyMedium": "Medium",
+  "difficultyHard": "Hard",
+  "goBack": "Back"
 }
