Add settings menu with hint settings
This includes adding a new context and some wonky styling. Yay.

--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -8,5 +8,10 @@
   "notFilledMessage": "The board is not filled in!",
   "winMessage": "Congratulations! You solved it!",
   "lossMessage": "Nay. This is wrong.",
-  "goBack": "Back"
+  "goBack": "Back",
+  "settings": "Settings",
+  "hintsLabel": "When should errors be indicated?",
+  "hints: always": "Always",
+  "hints: on check": "On check",
+  "hints: none": "None"
 }
